erDiagram
  UserLogins {
    bigint login_id PK "Auto-incremento"
    string username UK "Único"
    string password
    boolean status
    timestamp created_at
    timestamp updated_at
  }

  Users {
    serial id PK "Auto-incremento"
    string name
    string email UK "Único"
    bigint login_id FK "Referência a UserLogins"
    timestamp created_at
    timestamp updated_at
  }

  FavoriteProducts {
    serial id PK "Auto-incremento"
    int user_id FK "Referência a Users"
    int product_external_id FK "Referência ao ID externo do produto"
    timestamp added_at
  }

  ProductCache {
    int product_external_id PK "ID do produto na API externa"
    string title
    decimal price
    string image_url
    text description
    string category
    decimal rating_rate
    int rating_count
    timestamp last_updated
  }

  UserLogins ||--|| Users : authenticates
  Users ||--o{ FavoriteProducts : has
  FavoriteProducts }o--|| ProductCache : references